rcfilters: Fix filter menu checkbox alignment after OOUI v0.27.5 release
Bug: T199466

--- a/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.ItemMenuOptionWidget.less
+++ b/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.ItemMenuOptionWidget.less
@@ -58,6 +58,7 @@
 		.oo-ui-checkboxInputWidget {
 			// Workaround for IE11 rendering issues. T162098
 			display: block;
+			padding-top: 1em;
 		}
 	}
 
